--- a/certi/package.json
+++ b/certi/package.json
@@ -15,6 +15,7 @@
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.2",
     "sheetjs": "^2.0.0",
     "xlsx": "^0.18.5"
   },
